--- a/client/src/css/topGameHeader.css
+++ b/client/src/css/topGameHeader.css
@@ -1,8 +1,11 @@
 .top-bar-game {
-    height: 48px;
     margin-bottom: 8px;
     background-color: #eee;
-    line-height: 54px;
+    line-height: 58px;
     display: flex;
+    width: 50%;
     justify-content: space-evenly;
+    align-self: center;
+    border:1px solid #eee;
+    border-radius: 3px;
 }
